--- a/.classpath
+++ b/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
+	<classpathentry kind="lib" path="C:/Users/shukai/Documents/workspace-sts-2.9.1.RELEASE/s3qlDroid/libs/android-async-http-1.4.2.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
