--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -55,6 +55,7 @@
             android:label="@string/title_activity_s3_dbc" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -65,7 +66,10 @@
         <activity
             android:name="org.mathbiol.s3qldroid.InsertDemo"
             android:label="@string/title_activity_insert_demo" >
-
+        </activity>
+        <activity
+            android:name="org.mathbiol.s3qldroid.SelectDemo"
+            android:label="@string/title_activity_select_demo" >
         </activity>
     </application>
 
