--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -10,6 +10,7 @@
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <uses-feature
         android:name="android.hardware.touchscreen"
@@ -70,6 +71,10 @@
         <activity
             android:name="org.mathbiol.s3qldroid.SelectDemo"
             android:label="@string/title_activity_select_demo" >
+        </activity>
+        <activity
+            android:name="org.mathbiol.s3qldroid.MultiMediaProceesing"
+            android:label="@string/title_activity_multi_media_proceesing" >
         </activity>
     </application>
 
